It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Dec 12, 2009
---------------------------------------------------------------------
- Upgraded [simple_column_search] plugin that adds search support for Postgres.
- More I18n tweaks in views.
- Metallica show at HP Pavilion in San Jose!

Sun, Nov 29, 2009
---------------------------------------------------------------------
- Added optional PLUGIN=plugin parameter to "rake crm:settings:load" task.

Tue, Nov 24, 2009
---------------------------------------------------------------------
- Happy birthday, Fat Free CRM is one year old!

Mon, Nov 16, 2009
---------------------------------------------------------------------
- Streamlined CSS styles to fix text wrapping.
- Added explicit CSS value to fix tabs height (thanks, Apirak!)
- Fixed time calculations for dashboard activities.

Fri, Nov 6, 2009
---------------------------------------------------------------------
- Adjust total campaign revenue when related opportunity is won (LH #121).
- Refresh campaign sidebar when updating related opportunity (LH #121).
- Refresh campaign sidebar when rejecting or converting related lead (LH #121).
- Display newly created opportunity when converting lead from campaign page (LH #121).

Thu, Nov 5, 2009
---------------------------------------------------------------------
- Writing specs for LH #121.

Wed, Nov 4, 2009
---------------------------------------------------------------------
- Correctly set opportunity campaign and source when converting a lead (LH #119).
- Show correct campaign name and source when adding a lead from campaign landing page.
- Update lead counters when reassigning leads between campaigns (LH #117).

Sat, Oct 31, 2009
---------------------------------------------------------------------
- Correctly show opportunity summary when opportunity stage hasn't been specified.