@@ -1,8 +1,7 @@
-- assets = controller.controller_name
-- klass = controller.class.to_s
-- path = klass.include?("::") ? "#{klass.split('::').first.downcase}/#{assets}" : assets
+- path = controller.controller_name
+- path = "admin/#{path}" if controller.class.to_s.starts_with?("Admin::")
 
-%h4== Search #{assets}
+%h4 Search #{controller.controller_name}
 %div{ :style => "margin: 0px 0px 6px 0px" }
   = text_field_tag("query", @current_query, :size => 23)
   = observe_field("query", :frequency => 0.75, :function => "crm.search(value, '#{path}')")
