@@ -1,4 +1,3 @@
-- logger.i @opportunity
 .panel#summary
   .caption Opportunity Summary
   %li
