@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Dec 13, 2009
+---------------------------------------------------------------------
+- Fixed broken sidebar search in Admin/Users.
+- Refactored sidebar rendering to explicitly check if template file exists.
+
 Sat, Dec 12, 2009
 ---------------------------------------------------------------------
 - Upgraded [simple_column_search] plugin that adds search support for Postgres.
